fix: usar defensive copy explicita con Collections.unmodifiableList + ArrayList para JAVA-E1086